examples: update my personal config in examples

--- a/examples/config/thingsiplay.ini
+++ b/examples/config/thingsiplay.ini
@@ -6,49 +6,49 @@ output_directory = .
 output_filename_prefix =
 output_filename_append = .lpl
 overwrite_existing_playlist = false
-validate_rom_path = true
+validate_rom_path = false
 
 [Amstrad - CPC]
-content_directory = amstradcpc
+content_directory = amstradcpc/amstradcpc_tosec_dsk
 
 [Amstrad - GX4000]
 content_directory =
 
 [Arduboy Inc - Arduboy]
-content_directory =
+content_directory = arduboy/arduboy_nointro
 
 [Atari - 2600]
-content_directory = atari2600
+content_directory = atari2600/atari2600_nointro
 
 [Atari - 5200]
-content_directory = atari5200
+content_directory = atari5200/atari5200_nointro
 
 [Atari - 7800]
-content_directory = atari7800
+content_directory = atari7800/atari7800_nointro
 
 [Atari - 8-bit]
-content_directory = atari5200
+content_directory = atari8bit/atari8bit_tosec_atr
 
 [Atari - Jaguar]
-content_directory = atari7800
+content_directory = jaguar/jaguar_nointro
 
 [Atari - Lynx]
-content_directory = atarilynx
+content_directory = lynx/lynx_nointro
 
 [Atari - ST]
-content_directory = atarist
+content_directory = atarist/atarist_nointro
 
 [Atomiswave]
 content_directory =
 
 [Bandai - WonderSwan Color]
-content_directory = wonderswancolor
+content_directory = wonderswancolor/wonderswancolor_nointro
 
 [Bandai - WonderSwan]
-content_directory = wonderswan
+content_directory = wonderswan/wonderswan_nointro
 
 [Cannonball]
-content_directory = outrun
+content_directory = outrun/outrun_games
 
 [Casio - Loopy]
 content_directory =
@@ -66,13 +66,13 @@ content_directory =
 content_directory =
 
 [Coleco - ColecoVision]
-content_directory = coleco
+content_directory = coleco/coleco_nointro
 
 [Commodore - 64]
-content_directory = c64
+content_directory = c64/c64_tosec_tap
 
 [Commodore - Amiga]
-content_directory = amiga
+content_directory = amiga/amiga_games_whload
 
 [Commodore - CD32]
 content_directory =
@@ -84,19 +84,19 @@ content_directory =
 content_directory =
 
 [Commodore - Plus-4]
-content_directory = plus4
+content_directory = plus4/plus_tosec_prg
 
 [Commodore - VIC-20]
-content_directory = vic20
+content_directory = vic20_tosec_d64
 
 [Dinothawr]
 content_directory =
 
 [DOOM]
-content_directory = doom
+content_directory = doom/doom_chadmaster
 
 [DOS]
-content_directory = pcdos
+content_directory = pc/pc_dos_games
 
 [Emerson - Arcadia 2001]
 content_directory =
@@ -108,10 +108,10 @@ content_directory =
 content_directory =
 
 [Fairchild - Channel F]
-content_directory = channelf
+content_directory = channelf/channelf_nointro
 
 [FBNeo - Arcade Games]
-content_directory = fbneo
+content_directory = arcade/arcade_fbneo
 
 [Flashback]
 content_directory =
@@ -123,10 +123,10 @@ content_directory =
 content_directory =
 
 [GCE - Vectrex]
-content_directory = vectrex
+content_directory = vectrex/vectrex_nointro
 
 [Handheld Electronic Game]
-content_directory = gameandwatch
+content_directory = gameandwatch/gameandwatch_mgw
 
 [Hartung - Game Master]
 content_directory =
@@ -135,7 +135,7 @@ content_directory =
 content_directory =
 
 [Infocom - Z-Machine]
-content_directory = zmachine
+content_directory = zmachine/zmachine_tosec_z3
 
 [Jump 'n Bump]
 content_directory =
@@ -150,13 +150,13 @@ content_directory =
 content_directory =
 
 [Magnavox - Odyssey2]
-content_directory = videopac
+content_directory = videopac/vieopac_nointro
 
 [MAME 2000]
 content_directory =
 
 [MAME 2003-Plus]
-content_directory = mame2003plus
+content_directory = arcade/arcade_mame2003plus
 
 [MAME 2003]
 content_directory =
@@ -171,19 +171,19 @@ content_directory =
 content_directory =
 
 [MAME]
-content_directory = mame
+content_directory = arcade/arcade_mame
 
 [Mattel - Intellivision]
-content_directory = intellivision
+content_directory = intellivision/intellivision_nointro
 
 [Microsoft - MSX2]
-content_directory = msx
+content_directory = msx2/msx2_tosec_dsk
 
 [Microsoft - MSX]
-content_directory = msx
+content_directory = msx/msx_nointro
 
 [Microsoft - Xbox]
-content_directory = xbox
+content_directory = xbox/xbox_games
 
 [MicroW8]
 content_directory =
@@ -195,82 +195,82 @@ content_directory =
 content_directory =
 
 [NEC - PC-98]
-content_directory = pc98
+content_directory = pc98/pc98_games
 
 [NEC - PC Engine CD - TurboGrafx-CD]
-content_directory =
+content_directory = pcenginecd/pcenginecd_games
 
 [NEC - PC Engine SuperGrafx]
-content_directory = pcengine
+content_directory = supergrafx/supergrafx_nointro
 
 [NEC - PC Engine - TurboGrafx 16]
-content_directory = pcengine
+content_directory = pcengine/pcengine_nointro
 
 [NEC - PC-FX]
-content_directory = pcfx
+content_directory = pcfx/pcfx_games
 
 [Nintendo - e-Reader]
 content_directory =
 
 [Nintendo - Family Computer Disk System]
-content_directory = fds
+content_directory = fds/fds_nointro
 
 [Nintendo - Game Boy Advance]
-content_directory = gba
+content_directory = gba/gba_nointro
 
 [Nintendo - Game Boy Color]
-content_directory = gbc
+content_directory = gbc/gbc_nointro
 
 [Nintendo - Game Boy]
-content_directory = gb
+content_directory = gb/gb_nointro
 
 [Nintendo - GameCube]
-content_directory = gamecube
+content_directory = gamecube/gamecube_games
 
 [Nintendo - Nintendo 3DS]
-content_directory = n3ds
+content_directory = n3ds/n3ds_games
 
 [Nintendo - Nintendo 64DD]
-content_directory = n64dd
+content_directory = n64dd/n64dd_nointro
 
 [Nintendo - Nintendo 64]
-content_directory = n64
+content_directory = n64/n64_nointro
 
 [Nintendo - Nintendo DSi]
 content_directory =
 
 [Nintendo - Nintendo DS]
-content_directory = nds
+content_directory = nds/nds_games
 
 [Nintendo - Nintendo Entertainment System]
-content_directory = nes
+content_directory = nes/nes_nointro
 
 [Nintendo - Pokemon Mini]
-content_directory = poke
+content_directory = pokemini/pokemini_nointro
 
 [Nintendo - Satellaview]
-content_directory =
+content_directory = satellaview/satellaview_nointro
 
 [Nintendo - Sufami Turbo]
-content_directory =
+content_directory = sufami/sufami_nointro
 
 [Nintendo - Super Nintendo Entertainment System]
-content_directory = snes
+content_directory = snes/snes_nointro
 
 [Nintendo - Virtual Boy]
-content_directory = virtualboy
+content_directory = virtualboy/virtualboy_nointro
 
 [Nintendo - Wii (Digital)]
-content_directory = wii
+content_directory = wii/wii_games
 
 [Nintendo - Wii]
-content_directory = wii
+content_directory = wii/wii_games
 
 [Philips - CD-i]
-content_directory = cdi
+content_directory = cdi/cdi_games
 
 [Philips - Videopac+]
-content_directory = videopac
+content_directory = videopac/videopac_nointro
 
 [PuzzleScript]
 content_directory =
@@ -279,10 +279,10 @@ content_directory =
 content_directory =
 
 [Quake II]
-content_directory = quake2
+content_directory = quake2/quake2_games
 
 [Quake]
-content_directory = quake
+content_directory = quake/quake_games
 
 [RCA - Studio II]
 content_directory =
@@ -291,28 +291,28 @@ content_directory =
 content_directory =
 
 [RPG Maker]
-content_directory = easyrpg
+content_directory = easyrpg/easyrpg_games
 
 [ScummVM]
-content_directory = scummvm
+content_directory = scummvm/scummvm_collection_v2
 
 [Sega - 32X]
-content_directory = sega32x
+content_directory = sega32x/sega32x_nointro
 
 [Sega - Dreamcast]
-content_directory = dreamcast
+content_directory = dreamcast/dreamcast_games
 
 [Sega - Game Gear]
-content_directory = gamegear
+content_directory = gamegear/gamegear_nointro
 
 [Sega - Master System - Mark III]
-content_directory = mastersystem
+content_directory = mastersystem/mastersystem_nointro
 
 [Sega - Mega-CD - Sega CD]
-content_directory = segacd
+content_directory = segacd/segacd_games
 
 [Sega - Mega Drive - Genesis]
-content_directory = megadrive
+content_directory = megadrive/megadrive_nointro
 
 [Sega - Naomi 2]
 content_directory =
@@ -321,58 +321,58 @@ content_directory =
 content_directory =
 
 [Sega - PICO]
-content_directory = pico
+content_directory = pico/pico_nointro
 
 [Sega - Saturn]
-content_directory = saturn
+content_directory = saturn/saturn_games
 
 [Sega - SG-1000]
-content_directory = sg1000
+content_directory = sg1000/sg1000_nointro
 
 [Sharp - X1]
 content_directory =
 
 [Sharp - X68000]
-content_directory = x68000
+content_directory = x68000/x68000_games
 
 [Sinclair - ZX 81]
 content_directory =
 
 [Sinclair - ZX Spectrum +3]
-content_directory = zxspectrum
+content_directory = zxspectrum/zxspectrum_tosec_z80
 
 [Sinclair - ZX Spectrum]
-content_directory = zxspectrum
+content_directory = zxspectrum/zxspectrum_tosec_z80
 
 [SNK - Neo Geo CD]
-content_directory = neogeocd
+content_directory = neogeocd/neogeocd_games
 
 [SNK - Neo Geo Pocket Color]
-content_directory = ngpc
+content_directory = ngpc/ngpc_nointro
 
 [SNK - Neo Geo Pocket]
-content_directory = ngp
+content_directory = ngp/ngp_nointro
 
 [SNK - Neo Geo]
-content_directory = neogeoaes
+content_directory = neogeo/neogeo_neo
 
 [Sony - PlayStation 2]
-content_directory = ps2
+content_directory = ps2/ps2_games
 
 [Sony - PlayStation 3 (PSN)]
 content_directory =
 
 [Sony - PlayStation 3]
-content_directory = ps3
+content_directory = ps3/ps3_games
 
 [Sony - PlayStation Portable (PSN)]
 content_directory =
 
 [Sony - PlayStation Portable]
-content_directory = psp
+content_directory = psp/psp_games
 
 [Sony - PlayStation]
-content_directory = psx
+content_directory = psx/psx_games
 
 [Sony - PlayStation Vita]
 content_directory =
@@ -381,13 +381,13 @@ content_directory =
 content_directory =
 
 [The 3DO Company - 3DO]
-content_directory = 3do
+content_directory = 3do/3do_games
 
 [Thomson - MOTO]
 content_directory =
 
 [TIC-80]
-content_directory = tic80
+content_directory = tic80/tic80_collection
 
 [Tiger - Game.com]
 content_directory =
@@ -411,7 +411,7 @@ content_directory =
 content_directory =
 
 [Watara - Supervision]
-content_directory = supervision
+content_directory = supervision/supervision_nointro
 
 [Wolfenstein 3D]
 content_directory =
